--- a/client/bin/pom.xml
+++ b/client/bin/pom.xml
@@ -17,7 +17,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>applicationcrd-java-api-project</artifactId>
+        <artifactId>application-crd-java-api-project</artifactId>
         <groupId>me.snowdrop</groupId>
         <version>1.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -25,7 +25,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.snowdrop</groupId>
-    <artifactId>applicationcrd-client</artifactId>
+    <artifactId>application-crd-client</artifactId>
     <name>Snowdrop :: Application CRD:: Client</name>
     <packaging>bundle</packaging>
 
@@ -48,7 +48,7 @@
         </dependency>
           <dependency>
             <groupId>me.snowdrop</groupId>
-            <artifactId>applicationcrd-model</artifactId>
+            <artifactId>application-crd-model</artifactId>
           </dependency>
         <dependency>
           <groupId>io.fabric8</groupId>
