--- a/model/pom.xml
+++ b/model/pom.xml
@@ -17,7 +17,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>applicationcrd-java-api-project</artifactId>
+        <artifactId>application-crd-project</artifactId>
         <groupId>me.snowdrop</groupId>
         <version>1.0.4-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -25,7 +25,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.snowdrop</groupId>
-    <artifactId>applicationcrd-model</artifactId>
+    <artifactId>application-crd-model</artifactId>
     <name>Snowdrop :: Application CRD:: Model</name>
     <packaging>bundle</packaging>
 
@@ -119,7 +119,7 @@
                 <dependencies>
                     <dependency>
                         <groupId>me.snowdrop</groupId>
-                        <artifactId>applicationcrd-model-annotator</artifactId>
+                        <artifactId>application-crd-model-annotator</artifactId>
                         <version>${project.version}</version>
                     </dependency>
                 </dependencies>
