--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <groupId>me.snowdrop</groupId>
     <artifactId>application-crd-project</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
     <name>Snowdrop :: Application CRD</name>
 
     <url>http://fabric8.io/</url>
