--- a/model/pom.xml
+++ b/model/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>application-crd-project</artifactId>
         <groupId>me.snowdrop</groupId>
-        <version>1.0.9</version>
+        <version>1.0.10-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
